--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -10,6 +10,7 @@
 <p>+++++++++++++++++++++</p>
 
 <ul>
+    <li><a href="#" th:href="@{/sklep}">Sklep</a></li>
     <li><a href="#" th:href="@{/admin/add-product-form}">Add product</a></li>
     <li><a href="#" th:href="@{/admin/remove-product-list}">Remove product</a></li>
 </ul>
