--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -13,6 +13,7 @@
     <li><a href="#" th:href="@{/sklep}">Sklep</a></li>
     <li><a href="#" th:href="@{/admin/add-product-form}">Add product</a></li>
     <li><a href="#" th:href="@{/admin/remove-product-list}">Remove product</a></li>
+    <li><a href="#" th:href="@{/admin/edit-product-list}">Edit product</a></li>
 </ul>
 
 </body>
