Changed admin tools to work with database

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -11,9 +11,8 @@
 
 <ul>
     <li><a href="#" th:href="@{/sklep}">Sklep</a></li>
-    <li><a href="#" th:href="@{/admin/add-product-form}">Add product</a></li>
-    <li><a href="#" th:href="@{/admin/remove-product-list}">Remove product</a></li>
-    <li><a href="#" th:href="@{/admin/edit-product-list}">Edit product</a></li>
+    <li><a th:href="@{/admin/products}">Products</a> </li>
+
 </ul>
 
 </body>
